# Traffic-pi

./: ANNOTATION_GUIDE.md  ANNOTATION_WORKFLOW.md  Makefile  README.md  TRAINING_README.md  annotation_options.html  annotation_tool.py  annotation_workflow.py  collect_data.py  create_test_video.py  demo_visualizer.py  labelimg_patch.py  prepare_dataset.py  pyproject.toml  quick_train.py  quickstart.md  requirements.txt  setup.py  setup.sh  setup_training.py  test_difficult.py  test_performance.py  test_schematic.py  test_schematic_panel.py  test_system.py  traffic_lights.yaml  train_model.py  training_config.yaml  visualizer.py
config/: detection_config.yaml
src/: main.py  traffic_light_detector.py
training_data/extracted_frames_labels/: frame_000001.txt  frame_000002.txt  frame_000003.txt  frame_000004.txt  frame_000005.txt  frame_000006.txt  frame_000007.txt  frame_000008.txt  frame_000009.txt  frame_000010.txt  frame_000011.txt  frame_000012.txt  frame_000013.txt  frame_000014.txt  frame_000015.txt  frame_000016.txt  frame_000017.txt  frame_000018.txt  frame_000020.txt  frame_000021.txt  frame_000022.txt  frame_000023.txt  frame_000024.txt  frame_000025.txt  frame_000026.txt  frame_000027.txt  frame_000028.txt  frame_000029.txt  frame_000030.txt  frame_000031.txt  frame_000032.txt  frame_000033.txt  frame_000034.txt  frame_000035.txt  frame_000036.txt  frame_000040.txt  frame_000041.txt  frame_000042.txt  frame_000044.txt  frame_000046.txt  (+4 more)
